# slingshot

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: reports.yml
data/: drag-smoothed.csv  drag.csv
posts/: post-1.md
src/scripts/: ballistics_reports.py
src/slingshot/: ballistics.py  components.py  reports.py  site.py  units.py
src/slingshot/templates/: base.html  index.html  report.html  style.html
src/slingshot/templates/partials/: div.html  footer.html  header.html  table.html
tests/: __init__.py  test_ballistics.py
